--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,10 @@
+/* Variables */
+:root {
+  --btn-bg-color-primary: hsl(275, 100%, 25%);
+  --btn-bg-color-primary-hover: hsl(275, 100%, 20%);
+  --btn-bg-color-primary-disabled: hsl(275, 30%, 25%);
+}
+
 /* Reset */
 * {
   box-sizing: border-box;
