--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -2,25 +2,34 @@
   border-radius: 0.25rem;
   cursor: pointer;
   font-size: 1rem;
-  padding: 0.5rem 0.75rem;
-  transition: background-color 0.15s;
-}
-
-.outline {
-  background-color: transparent;
+  font-weight: 500;
+  padding: 0.8125rem 2.0625rem;
+  transition: background-color 0.15s, color 0.15s;
 }
 
 .primary {
   background-color: var(--btn-bg-color-primary);
   border: 0;
-  color: #fff;
+  color: var(--btn-text-color-primary);
 }
 
 .primary:hover {
   background-color: var(--btn-bg-color-primary-hover);
+  color: var(--btn-text-color-primary-hover);
 }
 
 .primary[disabled] {
   background-color: var(--btn-bg-color-primary-disabled);
   pointer-events: none;
+}
+
+.secondary {
+  background-color: transparent;
+  border: 1px solid var(--btn-outline-color);
+  color: var(--btn-outline-color);
+}
+
+.secondary:hover {
+  background-color: var(--btn-outline-color);
+  color: var(--btn-outline-text-color-hover);
 }
