--- a/src/components/common/card/card.module.css
+++ b/src/components/common/card/card.module.css
@@ -1,7 +1,6 @@
 .card {
-  background-color: #f4f4f4;
-  border: 1px solid rgb(55, 65, 81);
+  background-color: var(--bg-card);
   border-radius: 0.5rem;
-  box-shadow: 0 0 #0000, 0 0 #0000, 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
   padding: 1rem;
 }
