--- a/src/components/common/tabs/tabs.module.css
+++ b/src/components/common/tabs/tabs.module.css
@@ -11,9 +11,17 @@
 }
 
 .tabLink {
-  background-color: transparent;
-  border: 1px solid rgb(55, 65, 81);
-  border-bottom: 0;
-  font-size: 1rem;
-  padding: 0.25rem 0.5rem;
+  background-color: var(--bg-card);
+  border: 0;
+  color: var(--btn-bg-color-primary);
+  cursor: pointer;
+  font-size: 1.125rem;
+  padding: 0.5rem 1rem;
+}
+
+.tabLink.active {
+  background-color: var(--btn-bg-color-primary);
+  color: var(--btn-text-color-primary);
+  cursor: initial;
+  font-weight: 500;
 }
