--- a/src/components/form/textarea/textarea.module.css
+++ b/src/components/form/textarea/textarea.module.css
@@ -1,6 +1,36 @@
+.wrapper {
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr;
+  justify-items: flex-start;
+}
+
 .textarea {
-  font-size: 1rem;
-  padding: 1rem;
+  background-color: var(--bg-input);
+  border: 1px solid var(--input-border-color);
+  border-radius: 0.5rem;
+  color: var(--text-color-app);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding: 0.625rem;
   resize: none;
   tab-size: 2;
+  width: 100%;
+}
+
+.label {
+  display: block;
+  color: var(--text-color-app);
+  font-weight: 500;
+}
+
+@media screen and (min-width: 640px) {
+  .wrapper {
+    align-items: flex-start;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .label {
+    padding-top: 0.625rem;
+  }
 }
