--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,39 @@
 /* Variables */
-:root {
-  --btn-bg-color-primary: hsl(275, 100%, 25%);
-  --btn-bg-color-primary-hover: hsl(275, 100%, 20%);
-  --btn-bg-color-primary-disabled: hsl(275, 30%, 25%);
+body,
+body .theme-light {
+  --bg-app: hsl(0, 0%, 100%);
+  --bg-color-white: hsl(0, 0%, 100%);
+  --bg-card: hsla(253, 21%, 8%, 0.04);
+  --bg-inverted: hsl(253, 21%, 8%);
+  --bg-dark-mode-switch: hsla(253, 21%, 8%, 0.4);
+  --bg-form: hsl(0, 0%, 100%);
+  --bg-input: hsl(0, 0%, 100%);
+  --input-border-color: hsl(0, 0%, 77%);
+  --btn-bg-color-primary: hsl(42, 100%, 64%);
+  --btn-bg-color-primary-hover: hsl(253, 21%, 8%);
+  --btn-bg-color-primary-disabled: hsl(42, 100%, 80%);
+  --btn-text-color-primary: hsl(253, 21%, 8%);
+  --btn-text-color-primary-hover: hsl(0, 0%, 100%);
+  --btn-text-color-secondary: hsl(0, 0%, 100%);
+  --btn-outline-color: hsl(253, 21%, 8%);
+  --btn-outline-text-color-hover: hsl(0, 0%, 98%);
+  --text-color-app: hsl(253, 21%, 8%);
+}
+
+body.dark,
+body .theme-dark {
+  --bg-app: hsl(253, 21%, 8%);
+  --text-color-app: hsl(0, 0%, 100%);
+  --bg-card: hsl(254, 23%, 15%);
+  --bg-inverted: hsl(0, 0%, 100%);
+  --bg-dark-mode-switch: hsl(240, 4%, 16%);
+  --bg-form: hsl(253, 21%, 8%);
+  --bg-input: hsla(253, 21%, 8%, 0.8);
+  --input-border-color: hsl(0, 0%, 33%);
+  --btn-bg-color-primary-hover: hsl(0, 0%, 98%);
+  --btn-text-color-primary-hover: hsl(253, 21%, 8%);
+  --btn-outline-color: var(--text-color-app);
+  --btn-outline-text-color-hover: hsl(253, 21%, 8%);
 }
 
 /* Reset */
@@ -12,6 +43,10 @@
   padding: 0;
 }
 
+body {
+  color: var(--text-color-app);
+}
+
 /* Display */
 .block {
   display: block;
@@ -19,6 +54,10 @@
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 /* Width */
@@ -32,8 +71,35 @@
   border-top-right-radius: 0px;
 }
 
+.rounded-tl-none {
+  border-top-left-radius: 0px;
+}
+
 .rounded-bl-none {
   border-bottom-left-radius: 0px;
+}
+
+/* Padding */
+.p-0 {
+  padding: 0;
+}
+
+.p-4 {
+  padding: 1rem; /* 16px */
+}
+
+.py-4 {
+  padding-bottom: 1rem; /* 16px */
+  padding-top: 1rem; /* 16px */
+}
+
+.py-40 {
+  padding-bottom: 10rem; /* 160px */
+  padding-top: 10rem; /* 160px */
+}
+
+.pt-40 {
+  padding-top: 10rem; /* 160px */
 }
 
 /* Margin */
@@ -41,10 +107,95 @@
   margin-left: auto;
 }
 
+.mt-2 {
+  margin-top: 0.5rem; /* 8px */
+}
+
 .mt-4 {
   margin-top: 1rem; /* 16px */
 }
 
+.mb-4 {
+  margin-bottom: 1rem; /* 16px */
+}
+
+.mt-8 {
+  margin-top: 2rem; /* 32px */
+}
+
 .mt-40 {
   margin-top: 10rem; /* 160px */
+}
+
+.my-40 {
+  margin-bottom: 10rem; /* 160px */
+  margin-top: 10rem; /* 160px */
+}
+
+/* Gap */
+.gap-4 {
+  gap: 1rem; /* 16px */
+}
+
+.gap-8 {
+  gap: 2rem; /* 32px */
+}
+
+/* Grid Template Columns */
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+/* Align Items */
+.items-start {
+  align-items: flex-start;
+}
+
+.items-center {
+  align-items: center;
+}
+
+/* Background */
+.bg-body {
+  background-color: var(--bg-color-white);
+}
+
+/* Font Size */
+.text-xl {
+  font-size: 1.25rem; /* 20px */
+  line-height: 1.75rem; /* 28px */
+}
+
+.text-7xl {
+  font-size: 4.5rem; /* 72px */
+  line-height: 1;
+}
+
+/* Justify Content */
+.justify-between {
+  justify-content: space-between;
+}
+
+/* A11y */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+/* Justify Items */
+.justify-items-start {
+  justify-items: start;
+}
+
+/* App Styles */
+body {
+  background-color: var(--bg-app);
+  color: var(--text-color-app);
 }
