--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,22 @@
+/* Fonts */
+@font-face {
+  font-family: 'JosefinSans';
+  src: local('JosefinSans'), url('./assets/fonts/JosefinSans.ttf') format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: local('Raleway'), url('./assets/fonts/Raleway.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: local('Raleway'), url('./assets/fonts/Raleway.ttf') format('truetype');
+  font-weight: 600;
+}
+
 /* Variables */
 body,
 body .theme-light {
@@ -19,6 +38,9 @@ body .theme-light {
   --btn-outline-color: hsl(253, 21%, 8%);
   --btn-outline-text-color-hover: hsl(0, 0%, 98%);
   --text-color-app: hsl(253, 21%, 8%);
+  --heading-font: 'JosefinSans', sans-serif;
+  --heading-weight: 600;
+  --body-font: 'Raleway', sans-serif;
 }
 
 body.dark,
@@ -47,6 +69,21 @@ body .theme-dark {
 
 body {
   color: var(--text-color-app);
+  font-family: var(--body-font);
+}
+
+strong {
+  font-weight: 600;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--heading-font);
+  font-weight: var(--heading-weight);
 }
 
 /* Display */
